// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/applications-service/case/1/relevant-representations/1/representation-details GET /applications-service/case/1/relevant-representations/1/representation-details and the representation is NOT in DRAFT should render the page with the change answers sections 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-2\\"> Mrs Sue</h1>
            <div class=\\"govuk-!-margin-bottom-4\\"><strong class=\\"govuk-tag govuk-tag--grey\\">awaiting review</strong>
            </div>
            <p class=\\"govuk-body-s govuk-!-margin-bottom-6\\"><strong>Project name:</strong> mock case title</p>
            <h3 class=\\"govuk-heading-m\\">Contact details</h3>
            <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
                <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Organisation name</dt>
                    <dd                     class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
                </div>
                <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Full name</dt>
                    <dd                     class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Mrs Sue</dd>
                </div>
                <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Job title</dt>
                    <dd                     class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
                </div>
                <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Email address</dt>
                    <dd                     class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">test@example.com</dd>
                </div>
                <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Telephone number</dt>
                    <dd                     class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">01234 567890</dd>
                </div>
            </dl>
            </dt>
            <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
            <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-details?repId=1&amp;repType=represented&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change contact details</span></a>
            </dd>
        </div>
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Address</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">44 Rivervale
                <br>Bridport
                <br>DT6 5RN
                <br>Great Britain</dd>
        </div>
        </dl>
        </dt>
        <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
        <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/address-details?repId=1&amp;repType=represented&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change address details</span></a>
        </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Preferred contact method</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Email</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-method?repId=1&amp;repType=represented&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change preferred contact method</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Type</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Local authorities</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/representation-type?repId=1&amp;repType=represented&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change type</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Under 18</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">No</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/under-18?repId=1&amp;repType=represented&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change under 18</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Representation on behalf of</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">A representative on behalf of another person, family group or organisation</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/representation-entity?repId=1&amp;repType=represented&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change representation on behalf of</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Agent contact details</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Organisation name</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Full name</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">James Bond</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Job title</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Email address</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">test-agent@example.com</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Telephone number</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">01234 567890</dd>
        </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-details?repId=1&amp;repType=representative&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change contact details</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Address</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">8 The Chase
            <br>Findon
            <br>BN14 0TT
            <br>Great Britain</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/address-details?repId=1&amp;repType=representative&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change address details</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Preferred contact method</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Post</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-method?repId=1&amp;repType=representative&amp;repMode=change\\"> Change<span class=\\"govuk-visually-hidden\\"> Change preferred contact method</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Representation</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row govuk-summary-list__row--no-actions\\"><dt class=\\"govuk-summary-list__key\\"> Reference</dt>
            <dd class=\\"govuk-summary-list__value\\">BC0110001-1</dd>
        </div>
        <div class=\\"govuk-summary-list__row govuk-summary-list__row--no-actions\\"><dt class=\\"govuk-summary-list__key\\"> Date received</dt>
            <dd class=\\"govuk-summary-list__value\\">27 April 2023</dd>
        </div>
        <div class=\\"govuk-summary-list__row\\" id=\\"original-representation-section\\"><dt class=\\"govuk-summary-list__key\\"> Original representation</dt>
            <dd class=\\"govuk-summary-list__value\\">
                <p class=\\"section-text govuk-body white-space--pre-line\\">
                    <noscript>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
                        ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
                        dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
                        nec, pellentesque eu, pretium quis, sem. Nulla con.</noscript>
                </p>
                <p class=\\"govuk-body govuk-!-margin-bottom-4\\"><a href=\\"#\\" hidden class=\\"section-text-toggle govuk-link govuk-link--no-visited-state\\">Show full representation</a>
                </p>
            </dd>
            <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/1/representation-details/redact-representation\\"> Redact<span class=\\"govuk-visually-hidden\\"> original representation</span></a>
            </dd>
        </div>
        <div class=\\"govuk-summary-list__row govuk-summary-list__row--no-actions\\"
        id=\\"redacted-representation-section\\"><dt class=\\"govuk-summary-list__key\\"> Redacted representation</dt>
            <dd class=\\"govuk-summary-list__value\\">
                <p class=\\"section-text govuk-body white-space--pre-line\\">
                    <noscript>(Redacted) Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
                        natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
                        con.</noscript>
                </p>
                <p class=\\"govuk-body govuk-!-margin-bottom-4\\"><a href=\\"#\\" hidden class=\\"section-text-toggle govuk-link govuk-link--no-visited-state\\">Show full redacted representation</a>
                </p>
            </dd>
        </div>
        <div class=\\"govuk-summary-list__row govuk-summary-list__row--no-actions\\"
        id=\\"redacted-notes-section\\"><dt class=\\"govuk-summary-list__key\\"> Redacted Notes</dt>
            <dd class=\\"govuk-summary-list__value\\">
                <p class=\\"govuk-body white-space--pre-line\\">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
            </dd>
        </div>
        <div class=\\"govuk-summary-list__row govuk-summary-list__row--no-actions\\"><dt class=\\"govuk-summary-list__key\\"> Redacted by</dt>
            <dd class=\\"govuk-summary-list__value\\">
                <p class=\\"govuk-body white-space--pre-line\\">mock redacted by</p>
            </dd>
        </div>
    </dl>
    <script nonce=\\"EdcOUaJ8lczj9tIPO0lPow==\\">
        function ToggleText() {
            this.toggle = (sectionId, text, textExcerpt, textToggleCopy) => {
              const section = document.querySelector(sectionId);
              const sectionText = section.querySelector('.section-text');
              const sectionTextToggle = section.querySelector('.section-text-toggle');
        
              let isOpen = false;
        
              const setSectionTextValues = (setSectionText, prependTextToggleCopy) => {
                sectionText.innerText = setSectionText
                sectionTextToggle.innerText = \`\${prependTextToggleCopy} full \${textToggleCopy}\`
              }
        
              const toggleSectionText = (e) => {
                e.preventDefault()
        
                if (isOpen) setSectionTextValues(textExcerpt, 'Show');
                else setSectionTextValues(text, 'Hide');
        
                isOpen = !isOpen
              }
        
              setSectionTextValues(textExcerpt, 'Show')
              sectionTextToggle.removeAttribute('hidden');
        
              sectionTextToggle.addEventListener('click', toggleSectionText)
            }
          }
        
            const toggleRepresentationText = new ToggleText();
            toggleRepresentationText.toggle(
              '#original-representation-section',
              \`Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla con.\`,
              \`Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec...\`,
              'representation'
            );
        
            const toggleRedactedRepresentationText = new ToggleText();
            toggleRedactedRepresentationText.toggle(
              '#redacted-representation-section',
              \`(Redacted) Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla con.\`,
              \`(Redacted) Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,...\`,
              'redacted representation'
            );
    </script>
    <h3 class=\\"govuk-heading-m\\"> Workflow</h3>
    <dl class=\\"govuk-summary-list\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key\\"> Redaction</dt>
            <dd class=\\"govuk-summary-list__value\\">Redacted</dd>
            <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"representation-details/change-redaction\\"> Change<span class=\\"govuk-visually-hidden\\"> Change redacted</span></a>
            </dd>
        </div>
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key\\"> Status</dt>
            <dd class=\\"govuk-summary-list__value\\"><strong class=\\"govuk-tag govuk-tag--grey\\">awaiting review</strong>
            </dd>
            <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"representation-details/change-status\\"> Change<span class=\\"govuk-visually-hidden\\"> Change status</span></a>
            </dd>
        </div>
        <div class=\\"govuk-summary-list__row govuk-summary-list__row--no-actions\\"><dt class=\\"govuk-summary-list__key\\"> Notes</dt>
            <dd class=\\"govuk-summary-list__value\\">Some notes</dd>
        </div>
    </dl><a class=\\"govuk-button govuk-button--secondary govuk-!-margin-bottom-9\\"
    href=\\"representation-details/task-log\\">View task log</a>
    <h3 class=\\"govuk-heading-m\\">Attachments</h3><a class=\\"govuk-button govuk-button--secondary\\" href=\\"/applications-service/case/1/relevant-representations/attachment-upload?repId=1&amp;repType=represented&amp;repMode=change\\"> Upload files</a>
    <dl     class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key\\"> a doc</dt>
            <dd class=\\"govuk-summary-list__value\\"></dd>
            <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/project-documentation//document//properties\\"> View/edit properties</a>
            </dd>
        </div>
        </dl>
        </div>
        </div>
</main>"
`;

exports[`/applications-service/case/1/relevant-representations/1/representation-details GET /applications-service/case/1/relevant-representations/1/representation-details and the representation is in DRAFT should render the page with the check answers sections 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <p class=\\"govuk-body\\"><strong>Project name:</strong> mock case title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
            <h1             class=\\"govuk-heading-l\\">Check your answers</h1>
                <h3 class=\\"govuk-heading-m\\">Contact details</h3>
                <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
                    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Organisation name</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Full name</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Mrs Sue</dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Job title</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Email address</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">test@example.com</dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Telephone number</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">01234 567890</dd>
                    </div>
                </dl>
                </dt>
                <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
                <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-details?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change contact details</span></a>
                </dd>
        </div>
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Address</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">44 Rivervale
                <br>Bridport
                <br>DT6 5RN
                <br>Great Britain</dd>
        </div>
        </dl>
        </dt>
        <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
        <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/address-details?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change address details</span></a>
        </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Preferred contact method</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Email</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-method?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change preferred contact method</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Type</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Local authorities</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/representation-type?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change type</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Under 18</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">No</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/under-18?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change under 18</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Representation on behalf of</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">A representative on behalf of another person, family group or organisation</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/representation-entity?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change representation on behalf of</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Agent contact details</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Organisation name</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Full name</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">James Bond</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Job title</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Email address</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">test-agent@example.com</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Telephone number</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">01234 567890</dd>
        </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-details?repId=1&amp;repType=representative&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change contact details</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Address</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">8 The Chase
            <br>Findon
            <br>BN14 0TT
            <br>Great Britain</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/address-details?repId=1&amp;repType=representative&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change address details</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Preferred contact method</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Post</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-method?repId=1&amp;repType=representative&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change preferred contact method</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Representation</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Date received</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">27 April 2023</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Original representation</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
                ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
                dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
                nec, pellentesque eu, pretium quis, sem. Nulla con.</dd>
        </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/add-representation?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change representation</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Attachments</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key\\"><ul class=\\"govuk-list\\"><li><strong>a doc</strong></li></ul></dt>
            <dd             class=\\"govuk-summary-list__value display--none\\"></dd>
                <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/attachment-upload?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change attachments</span></a>
                </dd>
        </div>
    </dl>
    <form method=\\"post\\">
        <button value=\\"1\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\">Submit for review</button>
    </form>
    </div>
    </div>
</main>"
`;

exports[`/applications-service/case/1/relevant-representations/1/representation-details POST /applications-service/case/1/relevant-representations/1/representation-details and there are errors should render the page with errors 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#type\\">Enter type</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <p class=\\"govuk-body\\"><strong>Project name:</strong> mock case title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
            <h1             class=\\"govuk-heading-l\\">Check your answers</h1>
                <h3 class=\\"govuk-heading-m\\">Contact details</h3>
                <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
                    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Organisation name</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Full name</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Mrs Sue</dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Job title</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Email address</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">test@example.com</dd>
                    </div>
                    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Telephone number</dt>
                        <dd                         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">01234 567890</dd>
                    </div>
                </dl>
                </dt>
                <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
                <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-details?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change contact details</span></a>
                </dd>
        </div>
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Address</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">44 Rivervale
                <br>Bridport
                <br>DT6 5RN
                <br>Great Britain</dd>
        </div>
        </dl>
        </dt>
        <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
        <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/address-details?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change address details</span></a>
        </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Preferred contact method</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Email</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-method?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change preferred contact method</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0 govuk-form-group--error\\" id=\\"type\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Type</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
    </div>
    <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-full\\"><span class=\\"govuk-error-message govuk-!-margin-0\\">Enter type</span></dt>
        <dd         class=\\"govuk-summary-list__value\\"></dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/representation-type?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change type</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Under 18</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">No</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/under-18?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change under 18</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Representation on behalf of</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">A representative on behalf of another person, family group or organisation</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/representation-entity?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change representation on behalf of</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Agent contact details</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Organisation name</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Full name</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">James Bond</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Job title</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\"></dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Email address</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">test-agent@example.com</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Telephone number</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">01234 567890</dd>
        </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-details?repId=1&amp;repType=representative&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change contact details</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Address</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">8 The Chase
            <br>Findon
            <br>BN14 0TT
            <br>Great Britain</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/address-details?repId=1&amp;repType=representative&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change address details</span></a>
    </dd>
    </div>
    <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Preferred contact method</dt>
        <dd         class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Post</dd>
    </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/contact-method?repId=1&amp;repType=representative&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change preferred contact method</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Representation</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key govuk-!-padding-0 govuk-!-width-full\\"><dl class=\\"govuk-summary-list display--block govuk-!-margin-0\\" id=\\"\\"><div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Date received</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">27 April 2023</dd>
        </div>
        <div class=\\"govuk-summary-list__row display--flex flex-wrap--wrap govuk-summary-list__row--no-border\\"><dt class=\\"govuk-summary-list__key govuk-!-width-one-third\\"> Original representation</dt>
            <dd             class=\\"govuk-summary-list__value govuk-!-width-two-thirds govuk-!-margin-0\\">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
                ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
                dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
                nec, pellentesque eu, pretium quis, sem. Nulla con.</dd>
        </div>
    </dl>
    </dt>
    <dd class=\\"govuk-summary-list__value width--0 govuk-!-padding-0\\"></dd>
    <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/add-representation?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change representation</span></a>
    </dd>
    </div>
    </dl>
    <h3 class=\\"govuk-heading-m\\">Attachments</h3>
    <dl class=\\"govuk-summary-list govuk-!-margin-bottom-9\\">
        <div class=\\"govuk-summary-list__row\\"><dt class=\\"govuk-summary-list__key\\"><ul class=\\"govuk-list\\"><li><strong>a doc</strong></li></ul></dt>
            <dd             class=\\"govuk-summary-list__value display--none\\"></dd>
                <dd class=\\"govuk-summary-list__actions\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/1/relevant-representations/attachment-upload?repId=1&amp;repType=represented&amp;repMode=check\\"> Change<span class=\\"govuk-visually-hidden\\"> Change attachments</span></a>
                </dd>
        </div>
    </dl>
    <form method=\\"post\\">
        <button value=\\"1\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\">Submit for review</button>
    </form>
    </div>
    </div>
</main>"
`;
